fix issue when critiquepresse allocine returns a fichefilm with id 0